# forlove

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
output/thirdlibs/lib/: libevent-2.1.so.6.0.2  libevent_core-2.1.so.6.0.2  libevent_pthreads-2.1.so.6.0.2
src/: main.cpp  main.d
thirdlibs/linux/lib/: libevent-2.1.so.6.0.2  libevent_core-2.1.so.6.0.2  libevent_extra-2.1.so.6.0.2  libevent_openssl-2.1.so.6.0.2  libevent_pthreads-2.1.so.6.0.2
tools/: control.sh
